# nagasaki

./: .dockerignore  .env_dev  .gitignore  .pylintrc  Dockerfile  HOW_TO_DEBIT_BITCLUDE.md  README.md  RESOURCES.md  docker-compose.yml  increment_tag_and_push.sh  pyproject.toml  run.sh  runtime_config.yml  runtime_config_example.yml  test_runtime_config.yml
.github/workflows/: deployment.yml  test-dat-thing.yml
alembic/: env.py
alembic/versions/: b22ff4f70b4c_change_snapshot_state_type_to_jsonb.py
docs/: bot_actions_chart.drawio  delta_epsilon.drawio  infra.drawio  nagasaki.drawio
docs/db/: bitclude_ticker_ask.sql  bitclude_ticker_bid.sql
grafana/: README.md  docker-compose.yml
grafana/dashboard_backups/: Nagasaki-1661256329992.json
nagasaki/: containers.py  enums.py  event_manager.py  exceptions.py  logger.py  runtime_config.py  schemas.py  settings.py  state.py  state_initializer.py  state_synchronizer.py  strategy.py  strategy_executor.py  utils.py
nagasaki/api/: auth.py  main.py
nagasaki/clients/: __init__.py  base_client.py  bitclude_client.py  bitclude_websocket_client.py  coinbase_client.py  cryptocompare_client.py  deribit_client.py  dto.py  exchange_client.py  trejdoo_client.py  usd_pln_quoting_base_client.py
nagasaki/clients/bitclude/: client.py  core.py  dto.py  models.py
nagasaki/clients/yahoo_finance/: core.py  dto.py
nagasaki/clients/yahoo_finance/example/: finance_chart.json  finance_quote.json
nagasaki/database/: __init__.py  database.py  models.py  utils.py
nagasaki/enums/: common.py
nagasaki/models/: bitclude.py
nagasaki/schemas/: bitclude.py
nagasaki/scrapers/: yahoo_finance_api.py
nagasaki/settings/: __init__.py  factory.py  runtime.py  startup.py
nagasaki/simple_trader/: main.py  settings.py
nagasaki/strategy/: __init__.py  abstract_strategy.py  bitclude_epsilon_strategy.py  delta_epsilon_strategy.py  delta_epsilon_strategy_ask.py  delta_epsilon_strategy_bid.py  dispatcher.py  hedging_strategy.py  market_making_strategy.py
nagasaki/strategy/calculators/: __init__.py  delta_calculator.py  epsilon_calculator.py  mid_price_calculator.py  price_calculator.py
nagasaki/strategy/delta_epsilon_strategy/: ask.py  bid.py  dispatcher.py
nagasaki/strategy/delta_strategy/: ask.py  bid.py  utils.py
nagasaki/trader/: .env  main.py  trader_app.py
nagasaki/utils/: common.py  deribit.py
node_exporter/: config.yml
playground/: MonteCasino.ipynb  bitclude_client.ipynb  bitclude_websocker_new.ipynb  bitclude_websocket.ipynb  ccxt_bitclude.ipynb  ccxt_bitclude.py  create_order_bitclude.ipynb  db.ipynb  db2.ipynb  db_my_trades.ipynb  deribit_order_taker.ipynb  how_to_debit.ipynb  line.ipynb  logger_dupsko.py  more_bitclude.ipynb  obj_l.py  papiez.ipynb  runtime_config.yml  singleton.py  yahoo.ipynb  yahoo_finance_scraper.ipynb  yahoo_finance_scrapper.ipynb  yaml.ipynb  zabawa.ipynb
postgres/: .env_dev  README.md  docker-compose copy.yml
postgres_exporter/: docker-compose.yml
prometheus/: config.yml  docker-compose.yml
tests/nagasaki/: strategy_ask_test.py  strategy_bid_test.py  strategy_test.py
tests/nagasaki/clients/: exchange_client_test.py
tests/nagasaki/clients/bitclude/: dto_test.py
tests/nagasaki/clients/deribit/: deribit_test.py
tests/nagasaki/event_manager/: event_manager_test.py
tests/nagasaki/settings/: factory_test.py
tests/nagasaki/strategy/bitclude_epsilon_strategy/: bid_test.py  bitclude_epsilon_strategy_bid_test.py
tests/nagasaki/strategy/calculators/: delta_calculator_test.py  epsilon_calculator_test.py  mid_price_calculator_test.py
tests/nagasaki/strategy/delta_epsilon_strategy/: conftest.py  delta_ask_test.py  delta_bid_test.py  delta_epsilon_strategy_ask_test.py  dispatcher_test.py  epsilon_ask_test.py  epsilon_bid_test.py  helpers_test.py  utils.py
tests/nagasaki/strategy/delta_strategy/: utils_test.py
tests/nagasaki/strategy/hedging_strategy/: conftest.py  hedging_strategy_test.py  long_test.py  short_test.py  utils.py
tests/nagasaki/strategy_executor/: strategy_executor_test.py
tests/training/dependency_injection/: main.py
websocket_logger/: .env_dev  Dockerfile  docker-compose.yml  pyproject.toml
websocket_logger/websocket_logger/: main.py  settings.py
workflows/: hetzner.yml  kimsufi.yml
